--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "react-widgets": "^5.8.4"
