--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "react-tabs": "^6.1.0",
     "react-widgets": "^5.8.4"
   },
   "devDependencies": {
